--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
       "node_modules/**/*"
     ],
     "rules": {
+      "@typescript-eslint/no-unused-vars": "warn",
       "no-unused-vars": "warn"
     }
   }
