--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
       "node_modules/**/*"
     ],
     "rules": {
-      "@typescript-eslint/no-unused-vars": "warn",
-      "no-unused-vars": "warn"
+      "@typescript-eslint/no-unused-vars": "off",
+      "no-unused-vars": "off"
     }
   }
 }
