--- a/package.json
+++ b/package.json
@@ -46,8 +46,9 @@
       "node_modules/**/*"
     ],
     "rules": {
-      "@typescript-eslint/no-unused-vars": "off",
-      "no-unused-vars": "off"
+      "@typescript-eslint/no-unused-vars": 1,
+      "no-unused-vars": 1,
+      "no-inferrable-types": 0
     }
   }
 }
